- phoromatic: Add support for viewing system logs from the result page link on right hand side
- phoromatic: Support for disabling accounts via rootadmin
- phoromatic: Track elapsed time during the testing process, report to Phoromatic Server
- phoromatic: Allow Phoromatic Servers to be specified via a simple text file at PTS_USER_PATH/phoromatic-servers

Phoronix Test Suite 5.4 Milestone 6
19 November 2014

- pts-core: Fix result merging when PTS test identifier is null, use title string instead as identifier
- pts-core: Check for PHP Sockets support
- pts-core: Enhanced make-download-cache
- pts-core: Enhance PHP_BIN detection
- pts-core: Use system's zip library if PHP ZIP is not available
- phoromatic: Upstart phoromatic-server job is working (tested on Scientific Linux 6.6)
- phoromatic: Add "Run Test Schedule Now" button to test schedule page to allow for easy one-time/manual testing
- phoromatic: Add some basic statistics to the rootadmin page
- phoromatic: Allow the PhoromaticStorage location to be modified from the webUI when logging in as rootadmin
- phoromatic: Allow the download cache location to be modified from the webUI when logging in as rootadmin
- phoromatic: Allow the network proxy details to be modified from the webUI when logging in as rootadmin
- phoromatic: Allow the HTTP / WebSocket ports to be modified from the webUI when logging in as rootadmin
- phoromatic: Increase memory_limit on download cache downloads
- phoromatic: Expose all possible video modes as test options
- phoromatic: Show recent triggers on a test schedule's page
- phoromatic: Add "Upload results to OpenBenchmarking.org" option to settings page
- phoromatic: Fix for deactivating options on settings page
- phoromatic: Remember last successful Phoromatic Server connection
- phoromatic: Add reboot and shutdown commands to Phoromatic module

Phoronix Test Suite 5.4 Milestone 5
10 November 2014

- pts-core: Improvements when running as a systemd service / daemon